Next steps email (#417)
* Added new email strings.

* WIP

Co-Authored by: Eric Johnson <eric.m.johnson@state.mn.us>

* WIP

* Merge main branch into this branch.

* WIP

* WIP

* WIP fixing tests

* WIP

* Removed unused email methods and tests.

* Next Steps Email - No Expedited Programs: remove
healthcareRenewalNextSteps page

[#185924768]

Co-authored-by: Taylor Johnson <taylor.johnson@state.mn.us>

* Next Steps Email - No Expedited Programs: Add new tests

[#185924768]

Co-authored-by: Eric Johnson <eric.m.johnson@state.mn.us>
Co-authored-by: Taylor Johnson <taylor.johnson@state.mn.us>

* WIP remove unused emails and strings.

Co-authored-by: John Bisek <john.bisek@state.mn.us>
Co-authored-by: Taylor Johnson <taylor.johnson@state.mn.us>

* Next Steps Email - No Expedited Programs (3)

Co-Authored by: John Bisek <john.bisek@state.mn.us>

* Merged Main into Branch

* Updated Tests

* Removed TODO tasks

---------

Co-authored-by: EricMN35Johnson <eric.m.johnson@state.mn.us>
Co-authored-by: pwjmb05 <john.bisek@state.mn.us>