@@ -8,8 +8,11 @@ import static org.codeforamerica.shiba.Program.SNAP;
 import static org.codeforamerica.shiba.internationalization.InternationalizationUtils.listToString;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
+
+import org.codeforamerica.shiba.RoutingDestinationMessageService;
 import org.codeforamerica.shiba.internationalization.LocaleSpecificMessageSource;
 import org.codeforamerica.shiba.output.caf.CcapExpeditedEligibility;
 import org.codeforamerica.shiba.output.caf.SnapExpeditedEligibility;
@@ -29,53 +32,171 @@ public class NextStepsContentService {
     this.messageSource = messageSource;
   }
 
-  public List<NextStepSection> getNextSteps(List<String> programs,
+  public List<NextStepSection> createNextStepsForEmail(List<String> programs,
       SnapExpeditedEligibility snapExpeditedEligibility,
       CcapExpeditedEligibility ccapExpeditedEligibility,
-      Locale locale) {
+      Locale locale,
+      String routingDestinationWithPhone,
+      String routingDestinationNoPhone) {
     boolean isSnapExpeditedEligible = snapExpeditedEligibility == SnapExpeditedEligibility.ELIGIBLE;
     boolean isCcapExpeditedEligible = ccapExpeditedEligibility == CcapExpeditedEligibility.ELIGIBLE;
 
     LocaleSpecificMessageSource lms = new LocaleSpecificMessageSource(locale, messageSource);
     List<NextStepSection> messages = new ArrayList<>();
 
+    messages.add(new NextStepSection("",
+    	lms.getMessage("email.you-submitted", Arrays.asList(routingDestinationNoPhone)),
+        ""));
+    
+    messages.add(new NextStepSection("",
+    	lms.getMessage("email.your-next-steps"),
+    	lms.getMessage("email.whats-next")));
+    
+    messages.add(new NextStepSection("",
+    	lms.getMessage("email.do-you-want-to-send-in-documents"),
+    	lms.getMessage("email.upload-your-documents")));
+    
     // Expedited Snap timing
-    if (isSnapExpeditedEligible) {
+    // Default to SNAP expedited if both are true
+    if (isSnapExpeditedEligible) {      
       messages.add(new NextStepSection(PHONE_ICON,
-          lms.getMessage("success.expedited-snap-timing"),
-          lms.getMessage("success.expedited-snap-timing-header"))
+          lms.getMessage("email.SNAP-expedited", Arrays.asList(routingDestinationNoPhone, routingDestinationWithPhone)),
+          lms.getMessage("email.allow-time-for-a-worker"))
       );
     }
 
     // Expedited Ccap timing
-    if (isCcapExpeditedEligible) {
+    if (isCcapExpeditedEligible && !isSnapExpeditedEligible) {
       messages.add(new NextStepSection(LETTER_ICON,
-          lms.getMessage("success.expedited-ccap-timing"),
-          lms.getMessage("success.expedited-ccap-timing-header"))
+          lms.getMessage("email.CCAP-expedited", Arrays.asList(routingDestinationNoPhone, routingDestinationWithPhone)),
+          lms.getMessage("email.allow-time-for-a-worker"))
       );
     }
 
     // Contact Promise for all programs they are not expedited for
     List<String> nonExpeditedPrograms =
         getNonExpeditedPrograms(programs, isSnapExpeditedEligible, isCcapExpeditedEligible, lms);
-    if (!nonExpeditedPrograms.isEmpty()) {
-      String humanReadableProgramList = listToString(nonExpeditedPrograms, lms);
+    if (!nonExpeditedPrograms.isEmpty() && !isSnapExpeditedEligible && !isCcapExpeditedEligible) {
       messages.add(new NextStepSection(LETTER_ICON,
-          lms.getMessage("success.contact-promise", List.of(humanReadableProgramList)),
-          lms.getMessage("success.contact-promise-header")));
+          lms.getMessage("email.not-expedited", Arrays.asList(routingDestinationNoPhone, routingDestinationWithPhone)),
+          lms.getMessage("email.allow-time-for-a-worker")));
     }
 
-    // Suggested Action
-    String suggestedAction = lms.getMessage("success.standard-suggested-action");
-    if (isSnapExpeditedEligible && !programs.contains(CCAP)) {
-      suggestedAction = lms.getMessage("success.expedited-snap-suggested-action");
-    }
     messages.add(new NextStepSection(COMMUNICATE_ICON,
-        suggestedAction,
-        lms.getMessage("success.suggested-action-header")));
+    	lms.getMessage("email.mental-health-crisis"),
+        lms.getMessage("email.need-help-now")));
+    
+    messages.add(new NextStepSection(COMMUNICATE_ICON,
+    	lms.getMessage("email.visit-faqs"),
+        lms.getMessage("email.have-other-questions")));
 
     return messages;
   }
+  
+  public List<NextStepSection> createNextStepsForFullConfirmationEmail(List<String> programs,
+      SnapExpeditedEligibility snapExpeditedEligibility,
+      CcapExpeditedEligibility ccapExpeditedEligibility,
+      Locale locale,
+      String routingDestinationWithPhone,
+      String routingDestinationNoPhone) {
+    boolean isSnapExpeditedEligible = snapExpeditedEligibility == SnapExpeditedEligibility.ELIGIBLE;
+    boolean isCcapExpeditedEligible = ccapExpeditedEligibility == CcapExpeditedEligibility.ELIGIBLE;
+
+    LocaleSpecificMessageSource lms = new LocaleSpecificMessageSource(locale, messageSource);
+    List<NextStepSection> messages = new ArrayList<>();
+    
+    messages.add(new NextStepSection("",
+    	lms.getMessage("email.your-next-steps"),
+    	lms.getMessage("email.whats-next")));
+    
+    messages.add(new NextStepSection("",
+    	lms.getMessage("email.do-you-want-to-send-in-documents"),
+    	lms.getMessage("email.upload-your-documents")));
+    
+    // Expedited Snap timing
+    // Default to SNAP expedited if both are true
+    if (isSnapExpeditedEligible) {      
+      messages.add(new NextStepSection(PHONE_ICON,
+          lms.getMessage("email.SNAP-expedited", Arrays.asList(routingDestinationNoPhone, routingDestinationWithPhone)),
+          lms.getMessage("email.allow-time-for-a-worker"))
+      );
+    }
+
+    // Expedited Ccap timing
+    if (isCcapExpeditedEligible && !isSnapExpeditedEligible) {
+      messages.add(new NextStepSection(LETTER_ICON,
+          lms.getMessage("email.CCAP-expedited", Arrays.asList(routingDestinationNoPhone, routingDestinationWithPhone)),
+          lms.getMessage("email.allow-time-for-a-worker"))
+      );
+    }
+
+    // Contact Promise for all programs they are not expedited for
+    List<String> nonExpeditedPrograms =
+        getNonExpeditedPrograms(programs, isSnapExpeditedEligible, isCcapExpeditedEligible, lms);
+    if (!nonExpeditedPrograms.isEmpty() && !isSnapExpeditedEligible && !isCcapExpeditedEligible) {
+      messages.add(new NextStepSection(LETTER_ICON,
+          lms.getMessage("email.not-expedited", Arrays.asList(routingDestinationNoPhone, routingDestinationWithPhone)),
+          lms.getMessage("email.allow-time-for-a-worker")));
+    }
+
+    messages.add(new NextStepSection(COMMUNICATE_ICON,
+    	lms.getMessage("email.mental-health-crisis"),
+        lms.getMessage("email.need-help-now")));
+    
+    messages.add(new NextStepSection(COMMUNICATE_ICON,
+    	lms.getMessage("email.visit-faqs"),
+        lms.getMessage("email.have-other-questions")));
+
+    return messages;
+  }
+  
+  public List<NextStepSection> createSectionsForNextStepsPage(List<String> programs,
+	      SnapExpeditedEligibility snapExpeditedEligibility,
+	      CcapExpeditedEligibility ccapExpeditedEligibility,
+	      Locale locale) {
+	    boolean isSnapExpeditedEligible = snapExpeditedEligibility == SnapExpeditedEligibility.ELIGIBLE;
+	    boolean isCcapExpeditedEligible = ccapExpeditedEligibility == CcapExpeditedEligibility.ELIGIBLE;
+
+	    LocaleSpecificMessageSource lms = new LocaleSpecificMessageSource(locale, messageSource);
+	    List<NextStepSection> messages = new ArrayList<>();
+
+	    // Expedited Snap timing
+	    if (isSnapExpeditedEligible) {
+	      messages.add(new NextStepSection(PHONE_ICON,
+	          lms.getMessage("success.expedited-snap-timing"),
+	          lms.getMessage("success.expedited-snap-timing-header"))
+	      );
+	    }
+
+	    // Expedited Ccap timing
+	    if (isCcapExpeditedEligible) {
+	      messages.add(new NextStepSection(LETTER_ICON,
+	          lms.getMessage("success.expedited-ccap-timing"),
+	          lms.getMessage("success.expedited-ccap-timing-header"))
+	      );
+	    }
+
+	    // Contact Promise for all programs they are not expedited for
+	    List<String> nonExpeditedPrograms =
+	        getNonExpeditedPrograms(programs, isSnapExpeditedEligible, isCcapExpeditedEligible, lms);
+	    if (!nonExpeditedPrograms.isEmpty()) {
+	      String humanReadableProgramList = listToString(nonExpeditedPrograms, lms);
+	      messages.add(new NextStepSection(LETTER_ICON,
+	          lms.getMessage("success.contact-promise", List.of(humanReadableProgramList)),
+	          lms.getMessage("success.contact-promise-header")));
+	    }
+
+	    // Suggested Action
+	    String suggestedAction = lms.getMessage("success.standard-suggested-action");
+	    if (isSnapExpeditedEligible && !programs.contains(CCAP)) {
+	      suggestedAction = lms.getMessage("success.expedited-snap-suggested-action");
+	    }
+	    messages.add(new NextStepSection(COMMUNICATE_ICON,
+	        suggestedAction,
+	        lms.getMessage("success.suggested-action-header")));
+
+	    return messages;
+	  }
   
   public List<NextStepSection> getNextStepsForDocumentUpload(boolean isDocumentUploaded,
 	      Locale locale) {
